<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bwastedsoftware.district_7570_conference.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/welcomeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/welcome_txtView"
        android:textColor="@color/authui_colorPrimaryDark"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homestead_view"
        app:layout_constraintVertical_bias="0.054"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"/>

    <ImageView
        android:id="@+id/homestead_view"
        android:layout_width="0dp"
        android:layout_height="288dp"
        android:layout_marginBottom="352dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/homestead_fall"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/upcoming_button"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/event_upcoming"
        app:layout_constraintBaseline_toBaselineOf="@+id/current_button"
        app:layout_constraintLeft_toRightOf="@+id/current_button"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/current_button"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:text="@string/event_current"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/upcoming_button"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxtView" />

</android.support.constraint.ConstraintLayout>
